; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_opensslthreadlock.c_thread_setup.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_opensslthreadlock.c_thread_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mutex_buf = common dso_local global i32* null, align 8
@id_function = common dso_local global i32 0, align 4
@locking_function = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @thread_setup() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @CRYPTO_num_locks()
  %4 = sext i32 %3 to i64
  %5 = mul i64 %4, 4
  %6 = trunc i64 %5 to i32
  %7 = call i32* @malloc(i32 %6)
  store i32* %7, i32** @mutex_buf, align 8
  %8 = load i32*, i32** @mutex_buf, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %31

11:                                               ; preds = %0
  store i32 0, i32* %2, align 4
  br label %12

12:                                               ; preds = %23, %11
  %13 = load i32, i32* %2, align 4
  %14 = call i32 (...) @CRYPTO_num_locks()
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %12
  %17 = load i32*, i32** @mutex_buf, align 8
  %18 = load i32, i32* %2, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @MUTEX_SETUP(i32 %21)
  br label %23

23:                                               ; preds = %16
  %24 = load i32, i32* %2, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %2, align 4
  br label %12

26:                                               ; preds = %12
  %27 = load i32, i32* @id_function, align 4
  %28 = call i32 @CRYPTO_set_id_callback(i32 %27)
  %29 = load i32, i32* @locking_function, align 4
  %30 = call i32 @CRYPTO_set_locking_callback(i32 %29)
  store i32 1, i32* %1, align 4
  br label %31

31:                                               ; preds = %26, %10
  %32 = load i32, i32* %1, align 4
  ret i32 %32
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @CRYPTO_num_locks(...) #1

declare dso_local i32 @MUTEX_SETUP(i32) #1

declare dso_local i32 @CRYPTO_set_id_callback(i32) #1

declare dso_local i32 @CRYPTO_set_locking_callback(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
